--- a/bower.json
+++ b/bower.json
@@ -2,19 +2,22 @@
   "name": "music",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.6",
+    "angular": "1.2.15",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "jquery": "~1.10.2",
-    "angular-resource": "1.2.6",
-    "angular-cookies": "1.2.6",
-    "angular-sanitize": "1.2.6",
-    "angular-route": "1.2.6",
-    "normalize.scss": "~2.2.0+normalize.2.1.3",
-    "font-awesome": "~4.0.3"
+    "angular-resource": "1.2.15",
+    "angular-cookies": "1.2.15",
+    "angular-sanitize": "1.2.15",
+    "angular-route": "1.2.15",
+    "normalize.scss": "*",
+    "font-awesome": "~4.0.3",
+    "imagesloaded": "~3.1.4",
+    "masonry": "~3.1.5",
+    "angular-animate": "~1.2.15"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.6",
-    "angular-scenario": "1.2.6"
+    "angular-mocks": "1.2.15",
+    "angular-scenario": "1.2.15"
   }
 }
