--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "font-awesome": "~4.0.3",
     "imagesloaded": "~3.1.4",
     "masonry": "~3.1.5",
-    "angular-animate": "~1.2.15"
+    "angular-animate": "~1.2.15",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
