--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "imagesloaded": "~3.1.4",
     "masonry": "~3.1.5",
     "angular-animate": "~1.2.15",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "angular-moment": "~0.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
