--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "lodash": "~3.10.1",
     "angular-ui-router": "~0.2.18",
     "angularfire": "~1.1.3",
-    "normalize-scss": "~3.0.3"
+    "normalize-scss": "~3.0.3",
+    "angular-moment": "~0.10.3"
   },
   "appPath": "src"
 }
