--- a/package.json
+++ b/package.json
@@ -3,15 +3,30 @@
   "version": "1.0.0",
   "devDependencies": {
     "autoprefixer": "^6.1.0",
+    "body-parser": "^1.15.1",
     "bower": "^1.3.12",
     "browser-sync": "^2.8.2",
+    "concat": "^2.0.0",
     "cssnano": "^3.3.2",
-    "gulp": "^3.9.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-insert": "^0.5.0",
     "gulp-jade": "^1.1.0",
-    "gulp-postcss": "^6.1.0",
-    "gulp-sass": "^2.1.0",
+    "gulp-ng-annotate": "^1.1.0",
+    "gulp-nodemon": "^2.0.7",
+    "gulp-param": "^1.0.3",
+    "gulp-postcss": "^6.0.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
-    "gulp-util": "^3.0.7"
+    "gulp-util": "^3.0.7",
+    "multer": "^1.1.0",
+    "nodemon": "^1.9.2",
+    "run-sequence": "^1.1.5"
+  },
+  "dependencies": {
+    "express": "^4.13.4",
+    "soundcloud": "^3.1.0"
   }
 }
